<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="newer_posts">New posts: %1$s</string>
    <string name="menu_save">Save</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Select a photo</string>
    <string name="description_take_photo">Take a photo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="authorize">enter</string>
    <string name="error_blank_username">Enter username</string>
    <string name="error_blank_password">Enter password</string>
    <string name="error_blank_auth">Enter username and password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">login</string>
    <string name="repeat_password">password (repeat)</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="incorrect_credentials">Incorrect login and/or password. Please, try again</string>
    <string name="logout">Log out</string>
    <string name="sign_in">Sign in</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="error_blank_fields">Fill in all the fields</string>
    <string name="error_passwords">Enter the same password in both fields</string>
    <string name="upload_avatar">Upload avatar</string>
</resources>